policies/templates/gcp_network_routing_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-network-routing-v1
spec:
  crd:
    spec:
      names:
        kind: GCPNetworkRoutingConstraintV1
      validation:
        openAPIV3Schema:
          properties:
            mode:
              type: string
              #default: GLOBAL
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/network_routing.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPNetworkRoutingConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	lib.get_constraint_params(constraint, params)
            	asset := input.asset
            	asset.asset_type == "compute.googleapis.com/Network"
            
            	mode := lib.get_default(params, "mode", "GLOBAL")
            	network := asset.resource.data
            	network.routingConfig.routingMode != mode
            
            	message := sprintf("%v doesn't have %v routing.", [asset.name, mode])
            	metadata := {"resource": asset.name}
            }
            #ENDINLINE
